# wlss-backend-lib-prototype

./: .flake8  .gitignore  .mypy.ini  .ruff.toml  README.md  pyproject.toml  pytest.ini  whitelist.txt
.github/workflows/: ci-lint.yml  ci-test.yml
envs/ci/lint/: Dockerfile  docker-compose.yml
envs/ci/test/: Dockerfile  docker-compose.yml
tests/: test_types.py
tests/test_account/: test_types.py
tests/test_common/: test_types.py
tests/test_core/: test_types.py
tests/test_file/: test_types.py
tests/test_profile/: test_types.py
tests/test_shared/: test_types.py
tests/test_wish/: test_types.py
wlss/: __init__.py  types.py
wlss/account/: types.py
wlss/core/: exceptions.py  types.py
wlss/file/: constants.py  types.py
wlss/profile/: types.py
wlss/shared/: types.py
wlss/wish/: types.py
